refactored sources: - finalized (class) variables where possible - fixed types to remove compilation warnings - fixed use of deprecated methods
other changes that might possibly break things:
- all declarations of Resource/Trackable interfaces are now package-private